--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           - v1-dependencies-      
       - run: npm install
-      - run: sudo npm install codecov
+      - run: sudo npm install -g istanbul codecov
       - save_cache:
           paths:
             - node_modules
